src-ken&y/objects/Scale__mdt.object
<CustomObject>
    <fields>
        <fullName>Control_Field_Definition__c</fullName>
        <label>Control Field Definition</label>
        <metadataRelationshipControllingField>Scale__mdt.Entity_Definition__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Controlled Fields</relationshipLabel>
        <relationshipName>Controlled_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Entity_Definition__c</fullName>
        <label>Entity Definition</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Scales</relationshipLabel>
        <relationshipName>Scales</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Field_Definition__c</fullName>
        <label>Field Definition</label>
        <metadataRelationshipControllingField>Scale__mdt.Entity_Definition__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Scales</relationshipLabel>
        <relationshipName>Scales</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Scale__c</fullName>
        <label>Scale</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Scale</label>
    <pluralLabel>Scales</pluralLabel>
</CustomObject>